--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="name-cont">
             <h1>Faizullin Abdukhakim</h1>
             </div>
-            <h5>Front-end(React)__Junior</h5>
+            <h5>Front-end(React,VUE)__Junior</h5>
         </div>
         <div class="photo">
             <img class="my-photo" src="my-photo.jpg" alt="myPhoto">
@@ -54,8 +54,8 @@
         <div class="skills-block">
             <div class="skill-blocks-graph">
                 <h5>JavaScript</h5>
-                <input type="range" name="Js" id="Js" min="0" max="100" value="90">
-                <label for="Js">90%</label>
+                <input type="range" name="Js" id="Js" min="0" max="100" value="95">
+                <label for="Js">95%</label>
                 <hr>
             </div>
             <div class="skill-blocks-graph">
@@ -83,9 +83,9 @@
                 <hr>
             </div>
             <div class="skill-blocks-graph">
-                <h5>NPM, Yarn</h5>
-                <input type="range" name="npm" id="npm" min="0" max="100" value="55">
-                <label for="npm">55%</label>
+                <h5>VUE.JS</h5>
+                <input type="range" name="npm" id="npm" min="0" max="100" value="75">
+                <label for="npm">75%</label>
                 <hr>
             </div>
             <div class="skill-blocks-graph">
@@ -96,14 +96,14 @@
             </div>
             <div class="skill-blocks-graph">
                 <h5>Back-end</h5>
-                <input type="range" name="BE" id="BE" min="0" max="100" value="20">
-                <label for="Js">20%</label>
+                <input type="range" name="BE" id="BE" min="0" max="100" value="40">
+                <label for="Js">40%</label>
                 <hr>
             </div>
             <div class="skill-blocks-graph">
                 <h5>TypeScript</h5>
-                <input type="range" name="TS" id="TS" min="0" max="100" value="40">
-                <label for="Js">40%</label>
+                <input type="range" name="TS" id="TS" min="0" max="100" value="70">
+                <label for="Js">70%</label>
                 <hr>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     <li>NEXT.js</li>
                     <li>Anime.js</li>
                     <li>RxJs</li>
-                    <li>SvelteJs</li>
+                    <li>NUXTJS</li>
                 </ul>
                 <p>
                     I understand all sorts of algoritms. I can create the logic of application or any functionality of the site
@@ -141,7 +141,7 @@
             </div>
         </div>
         <div class="rect-container">
-            <h5>React</h5>
+            <h5>React, VUE</h5>
             <div class="details-block">
                 <ul>
                     <li>
@@ -191,7 +191,7 @@
                     <li>Hosting</li>
                 </ul>
                 <p>
-                    At the moment I'm going to learn and put into practice Node.ls
+                    I have excellent skills in Node Js, as well as Express.js
                 </p>
             </div>
         </div>
